Add link to my collection.

--- a/app/views/policies/_about.html.erb
+++ b/app/views/policies/_about.html.erb
@@ -1,4 +1,4 @@
-<p class="main">Hi!<span>Last updated: February 15, 2020</span></p>
+<p class="main">Hi!<span>Last updated: February 18, 2020</span></p>
 
 <p>I’m Mike and welcome to StillHaveThem, my first web app!</p>
 
@@ -7,7 +7,7 @@
 <p>As described on the landing page, it is a simple tool to help you maintain your video game collection. The design goal for StillHaveThem was to make service that provides clean, distraction-free space for user and his games. Place where your games are in the spotlight and essential tools are easily available without the need to navigate through many subpages.</p>
 
 
-<p>I built this project to improve my web development skills and keep track of my video game collection. Check <%= link_to 'my humble collection', 'https://www.stillhavethem.com/shared/test',class: 'me-link', target: :_blank %>. Nonetheless, it is very usable, and it will stay. So why not try it out? Maybe you’ll find it useful.</p>
+<p>I built this project to improve my web development skills and keep track of my video game collection. Check <%= link_to 'my humble collection', 'https://www.stillhavethem.com/shared/2heMplS9K-_AF4dEwrf2ULApPKQ',class: 'me-link', target: :_blank %>. Nonetheless, it is very usable, and it will stay. So why not try it out? Maybe you’ll find it useful.</p>
 
 <p>If you have any questions/suggestions or found a bug, please contact me by email at <%= link_to 'support@stillhavethem.com', 'mailto:support@stillhavethem.com', class: 'me-link' %></p>
 
