--- a/app/views/static_pages/_not_logged.html.erb
+++ b/app/views/static_pages/_not_logged.html.erb
@@ -1,4 +1,4 @@
-<p class="lp-about uk-text-justify"><span>Still Have Them</span> is a <span>free</span> tool to help you keep track of your <span>video game collection</span>. It’s simple design is oriented around your games and your games only. There are <span>no distracions</span> and <span>no ads.</span></p>
+<p class="lp-about uk-text-justify"><span>Still Have Them</span> is a <span>free</span> tool to help you keep track of your <span>video game collection</span>. It’s simple design is oriented around your games and your games only. There are <span>no distractions</span> and <span>no ads.</span></p>
 <div class="uk-grid-small" uk-grid>
   <div>
     <%= link_to signup_path,  { :remote => true, class: 'uk-button lp-button lp-big' } do %>
